--- a/front/pages/server/server-list.html
+++ b/front/pages/server/server-list.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>服务管理</title>
   <link rel="stylesheet" href="/css/oksub.css">
+  <script type="text/javascript" src="/lib/loading/okLoading.js"></script>
 </head>
 
 <body>
@@ -36,11 +37,12 @@
         defaultToolbar: ['filter'],
         cols: [[
           { type: "checkbox", title: "序号", fixed: 'left' },
-          { field: "server", title: "服务", width: 90, fixed: 'left' },
-          { field: "division", title: "分区", width: 90, fixed: 'left' },
-          { field: "node", title: "节点", width: 90 },
+          { field: "app", title: "应用", fixed: 'left' },
+          { field: "server", title: "服务", fixed: 'left' },
+          { field: "division", title: "分区", fixed: 'left' },
+          { field: "node", title: "节点"},
           {
-            field: "setting_stat", title: "设置状态", width: 90, align: "center", templet: function (d) {
+            field: "setting_stat", title: "设置状态", align: "center", templet: function (d) {
               switch (d.setting_stat) {
                 case 1: return "自动重启";
                 case 0: return "不重启";
@@ -48,17 +50,19 @@
             }
           },
           {
-            field: "cur_stat", title: "当前状态", width: 150, templet: function (d) {
+            field: "cur_stat", title: "当前状态", templet: function (d) {
               switch (d.cur_stat) {
+                case 0: return "停止";
                 case 1: return "运行中";
+                case 2: return "启动中";
               }
             }
           },
-          { field: "pid", title: "进程ID", width: 90 },
-          { field: "version", title: "版本", width: 90 },
+          { field: "pid", title: "进程ID" },
+          { field: "version", title: "版本" },
           { field: "release_user", title: "发布人", align: "center" },
           { field: "release_time", title: "发布时间", align: "center" },
-          { title: "操作", align: "center", templet: "#operationTpl", width: 100, fixed: 'right' }
+          { title: "操作", align: "center", templet: "#operationTpl", fixed: 'right' }
         ]]
       });
 
