--- a/front/pages/server/server-list.html
+++ b/front/pages/server/server-list.html
@@ -12,6 +12,27 @@
 
 <body>
   <div class="ok-body">
+    <form class="layui-form">
+      <div class="layui-form-item">
+        <div class="layui-inline">
+
+          <div class="layui-input-inline">
+            <input class="layui-input" placeholder="请输入应用名" autocomplete="off" name="app">
+          </div>
+          <div class="layui-input-inline">
+            <input class="layui-input" placeholder="请输入服务名" autocomplete="off" name="server">
+          </div>
+
+          <div class="layui-input-inline">
+            <button class="layui-btn" lay-submit lay-filter="search">
+              <i class="layui-icon layui-icon-search"></i>
+            </button>
+          </div>
+
+        </div>
+      </div>
+    </form>
+
     <table id="tableId" lay-filter="tableFilter"></table>
   </div>
 
@@ -40,7 +61,7 @@
           { field: "app", title: "应用", fixed: 'left' },
           { field: "server", title: "服务", fixed: 'left' },
           { field: "division", title: "分区", fixed: 'left' },
-          { field: "node", title: "节点"},
+          { field: "node", title: "节点" },
           {
             field: "setting_stat", title: "设置状态", align: "center", templet: function (d) {
               switch (d.setting_stat) {
@@ -90,6 +111,18 @@
             break;
         }
       });
+
+      form.on("submit(search)", function (data) {
+        roleTable.reload({
+          url: "/api/server/list",
+          where: data.field,
+          page: {
+            curr: 1,
+          }
+        });
+        return false;
+      });
+
     });
   </script>
 
