--- a/front/pages/server/task-info.html
+++ b/front/pages/server/task-info.html
@@ -10,20 +10,37 @@
 </head>
 
 <body>
-  <textarea name="info" class="layui-textarea" rows="30"></textarea>
+  <textarea name="info" class="layui-textarea"></textarea>
 
   <script src="/lib/layui/layui.js"></script>
   <script>
     layui.use(["okUtils", "util"], function () {
       let $ = layui.jquery;
       let okUtils = layui.okUtils;
+      let util = layui.util;
       okLoading.close();
 
-      okUtils.ajax("/api/server/getTask", "get", { taskNo : parent.taskNo }, true).done(function (response) {
-        $("textarea[name='info']").val(response.data);
-      }).fail(function (error) {
-        $("textarea[name='info']").val(error.msg);
+      let now = new Date().getTime();
+      util.countdown(now + 5, now, function (data, serverTime, timer) {
+        okUtils.ajax("/api/server/getTask", "get", { taskNo: parent.taskNo }, true).done(function (response) {
+          let info = "";
+          for (let key in response.data) {
+            if (key == "vItem") {
+              info += key + "{\n";
+              for (let index in response.data[key]) {
+                info += "\t" + index + ": " + response.data[key][index].toString() + "\n";
+              }
+              info += "}\n"
+            } else {
+              info += key + ": " + response.data[key].toString() + "\n";
+            }
+          }
+          $("textarea[name='info']").val(info);
+        }).fail(function (error) {
+          $("textarea[name='info']").val(error.msg);
+        });
       });
+
     });
   </script>
 
