--- a/front/pages/server/server-list.html
+++ b/front/pages/server/server-list.html
@@ -104,7 +104,7 @@
             type: 2,
             title : "任务详情",
             content: "./task-info.html",
-            anim: okLayer.animChoose(),
+            area: ['50%', "50%"],
             end: cb,
           }
           layer.open(param);
