--- a/front/pages/server/template.html
+++ b/front/pages/server/template.html
@@ -40,6 +40,7 @@
   <script src="/lib/layui/layui.js"></script>
   <script>
     var editData;
+    var allTemplate = new Set();
     layui.use(["element", "table", "form", "layer", "okLayer", "okUtils"], function () {
       let table = layui.table;
       let form = layui.form;
@@ -66,6 +67,7 @@
         parseData: function (res) {
           for (i = 0; res.data && i < res.data.length; ++i) {
             res.data[i].id = res.data[i].name;
+            allTemplate.add(res.data[i].name);
           }
           return res;
         }
@@ -97,11 +99,20 @@
         return false;
       });
 
+      table.on("toolbar(tableFilter)", function (obj) {
+        switch (obj.event) {
+          case "add":
+            console.log(obj);
+            add();
+            break;
+        }
+      });
+
       function edit(data) {
         editData = data;
         okLayer.open("编辑模板", "template-edit.html", "90%", "90%", null, function () {
           curTable.reload();
-        })
+        });
       }
 
       function del(data) {
@@ -129,6 +140,12 @@
         });
       }
 
+      function add(data) {
+        okLayer.open("添加模板", "template-add.html", "90%", "90%", null, function () {
+          curTable.reload();
+        });
+      }
+
     });
   </script>
 
@@ -136,6 +153,10 @@
     <a href="javascript:" title="查看" lay-event="show">查看</a>
     <a href="javascript:" title="编辑" lay-event="edit">编辑</a>
     <a href="javascript:" title="删除" lay-event="del">删除</a>
+  </script>
+
+  <script type="text/html" id="toolbarTpl">
+    <span style="cursor:pointer" lay-event="add">添加</span>
   </script>
 
 </body>
