--- a/front/pages/server/template-add.html
+++ b/front/pages/server/template-add.html
@@ -15,15 +15,14 @@
       <div class="layui-form-item">
         <label class="layui-form-label">模板名</label>
         <div class="layui-input-block">
-          <input type="text" id="name" class="layui-input" disabled="true">
+          <input type="text" id="name" class="layui-input">
         </div>
       </div>
 
       <div class="layui-form-item">
-        <div class="layui-inline">
-          <div class="layui-input-inline" style="width:250px">
-            <div id="parentSelect"></div>
-          </div>
+        <label class="layui-form-label">父模板</label>
+        <div class="layui-input-inline" style="width:250px">
+          <div id="parentSelect"></div>
         </div>
       </div>
 
@@ -46,35 +45,43 @@
   <script src="/lib/layui/layui.js"></script>
   <script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
   <script>
-    layui.use(['form', 'element'], function () {
+    layui.use(['form', 'element', 'okUtils', 'okLayer'], function () {
       let form = layui.form;
+      let okUtils = layui.okUtils;
+      let okLayer = layui.okLayer;
+      let $ = layui.jquery;
+
+      let keys = [];
+      for (let key of parent.allTemplate) {
+        keys.push({name: key, value: key});
+      }
 
       let parentSelect = xmSelect.render({
         el: '#parentSelect',
         name: 'parentName',
-        data: parent.allTemplate.keys(),
-        tips: '父模板',
+        data: keys,
         filterable: true,
         radio: true,
         model: {
           label: {
-            type: 'block',
-            block: {
-              //是否显示删除图标
-              showIcon: true,
-            }
+            type: 'text',
           }
         },
         autoRow: true,
         toolbar: {
           show: true,
           list: ["CLEAR"]
-        }
+        },
+        initValue: ['default']
       });
 
       form.on('submit(add)', function (data) {
-        console.log(data);
-        okUtils.ajax("/api/server/template_add", "post", data.field, true).done(function (response) {
+        let req = {
+          'name': $('#name').val(),
+          'parent': parentSelect.getValue()[0]['value'],
+          'content': $('#content').val(),
+        }
+        okUtils.ajax("/api/server/template_add", "post", req, true).done(function (response) {
           okLayer.greenTickMsg(response.data, function () {
             parent.layer.close(parent.layer.getFrameIndex(window.name));
           });
