--- a/front/pages/server/server-list.html
+++ b/front/pages/server/server-list.html
@@ -39,6 +39,7 @@
   <script src="/lib/layui/layui.js"></script>
   <script>
     var taskNo;
+    var editServer;
     layui.use(["element", "table", "form", "layer", "okUtils"], function () {
       let table = layui.table;
       let layer = layui.layer;
@@ -119,6 +120,10 @@
         switch (obj.event) {
           case "edit":
             break;
+          case "publish":
+            editServer = data;
+            openPublish();
+            break;
           default:
             serverOperator(data, obj.event);
             break;
@@ -149,6 +154,20 @@
         });
         return false;
       });
+
+      function openPublish() {
+        let param = {
+          type: 2,
+          title : "发布设置",
+          content: "./publish-list.html",
+          area: ['90%', "90%"],
+          end: function () {
+            
+          },
+          closeBtn: 2,
+        }
+        layer.open(param);
+      }
 
       function batchOperator(cmd) {
         let checkStatus = table.checkStatus("tableId");
@@ -188,6 +207,7 @@
     <a href="javascript:" title="停止" lay-event="stop">停止</a>
     <a href="javascript:" title="启动" lay-event="start">启动</a>
     <a href="javascript:" title="重启" lay-event="restart">重启</a>
+    <a href="javascript:" title="发布" lay-event="publish">发布</a>
   </script>
 
 <script type="text/html" id="toolbarTpl">
