--- a/front/pages/server/patch-list.html
+++ b/front/pages/server/patch-list.html
@@ -38,8 +38,10 @@
         defaultToolbar: ['filter'],
         cols: [[
           { field: "id", title: "ID", fixed: 'left' },
+          { field: "remark", title: "备注", fixed: 'left' },
           { field: "server", title: "服务", fixed: 'left' },
           { field: "file", title: "文件名", fixed: 'left' },
+          { field: "version", title: "版本号", fixed: 'left' },
           { field: "md5", title: "md5" },
           { field: "upload_time", title: "上传时间" },
           { title: "操作", align: "center", templet: "#operationTpl", fixed: 'right', width: 200 }
