--- a/front/pages/server/publish-detail.html
+++ b/front/pages/server/publish-detail.html
@@ -11,10 +11,25 @@
 
 <body>
   <div class="ok-body">
-    <div class="layui-input-inline" style="width: 50%">
-      <div id="patchSelect"></div>
-      <button type="button" class="layui-btn layui-btn-normal" lay-submit lay-filter="publish" style="margin-top: 25px">发布</button>
-    </div>
+    <form class="layui-form layui-form-pane ok-form" style="margin: 30px">
+      <div class="layui-form-item">
+        <label class="layui-form-label">应用服务名</label>
+      </div>
+      <div class="layui-form-item">
+        <div id="app_server"></div>
+      </div>
+      <div class="layui-form-item" style="margin-top: 30px">
+        <label class="layui-form-label">待发布节点</label>
+      </div>
+      <div class="layui-form-item" id="zones">
+      </div>
+      <div class="layui-form-item" style="margin-top: 30px">
+        <div class="layui-input-inline" style="width: 100%">
+          <div id="patchSelect"></div>
+          <button type="button" class="layui-btn layui-btn-normal" lay-submit lay-filter="publish" style="margin-top: 25px">发布</button>
+        </div>
+      </div>
+    </form>
   </div>
 
   <!--js逻辑-->
@@ -25,12 +40,24 @@
     layui.use(["element", "table", "form", "layer", "okUtils"], function () {
       let form = layui.form;
       let layer = layui.layer;
+      let $ = layui.jquery;
       let okUtils = layui.okUtils;
       let xmSelect = layui.xmSelect;
       okLoading.close();
 
       let editServer = parent.editServer
       let selectNode = parent.selectNode
+
+      $("#app_server").text(editServer.app + "." + editServer.server)
+      for (let v of selectNode) {
+        let zoneButton = "<button type='button' class='layui-btn'>"
+        zoneButton += v.node
+        if (v.division !== "") {
+          zoneButton += "(" + v.division + ")"
+        }
+        zoneButton += "</button>"
+        $("#zones").append(zoneButton)
+      }
 
       let patchSelect = xmSelect.render({
         el: '#patchSelect',
