--- a/front/pages/server/server-list.html
+++ b/front/pages/server/server-list.html
@@ -21,6 +21,9 @@
           <div class="layui-input-inline">
             <input class="layui-input" placeholder="请输入服务名" autocomplete="off" name="server">
           </div>
+          <div class="layui-input-inline">
+            <input class="layui-input" placeholder="请输入节点" autocomplete="off" name="node">
+          </div>
 
           <div class="layui-input-inline">
             <button class="layui-btn" lay-submit lay-filter="search">
@@ -39,11 +42,13 @@
   <script src="/lib/layui/layui.js"></script>
   <script>
     var taskNo;
-    layui.use(["element", "table", "form", "layer", "okUtils"], function () {
+    var editData;
+    layui.use(["element", "table", "form", "layer", "okUtils", "okLayer",], function () {
       let table = layui.table;
       let layer = layui.layer;
       let okUtils = layui.okUtils;
       let form = layui.form;
+      let okLayer = layui.okLayer;
       okLoading.close();
 
       let serverTable = table.render({
@@ -61,9 +66,10 @@
           { field: "app", title: "应用", fixed: 'left' },
           { field: "server", title: "服务", fixed: 'left' },
           { field: "division", title: "分区", fixed: 'left' },
-          { field: "node", title: "节点" },
+          { field: "node", title: "节点", fixed: 'left' },
+          { field: "template_name", title: "模板名", fixed: 'left'},
           {
-            field: "setting_stat", title: "设置状态", align: "center", templet: function (d) {
+            field: "setting_stat", title: "设置状态", fixed: 'left', align: "center", templet: function (d) {
               switch (d.setting_stat) {
                 case 1: return "自动重启";
                 case 0: return "<font color='#FF5722'>不重启</font>";
@@ -112,6 +118,7 @@
         let data = obj.data;
         switch (obj.event) {
           case "edit":
+            edit(data);
             break;
           default:
             serverOperator(data, obj.event);
@@ -129,6 +136,9 @@
             break;
           case "batchRestart":
             batchOperator("restart");
+            break;
+          case "add":
+            add();
             break;
         }
       });
@@ -173,6 +183,19 @@
         });
       }
 
+      function add() {
+        okLayer.open("增加服务", "./server-add.html", "90%", "90%", null, function () {
+          serverTable.reload();
+        });
+      }
+
+      function edit(data) {
+        editData = data;
+        okLayer.open("编辑服务", "./server-edit.html", "90%", "90%", null, function () {
+          serverTable.reload();
+        });
+      }
+
       // 定时刷新
       function update() {
         serverTable.reload();
@@ -194,6 +217,9 @@
     <span style="cursor:pointer" lay-event="batchStop">停止</span>
     <span style="cursor:pointer" lay-event="batchStart">启动</span>
     <span style="cursor:pointer" lay-event="batchRestart">重启</span>
+    <div class="layui-btn-container">
+      <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
+    </div>
   </script>
 
 </body>
