--- a/front/pages/server/template-edit.html
+++ b/front/pages/server/template-edit.html
@@ -53,16 +53,9 @@
 
       const data = parent.editData;
 
-      let keys = [];
-      for (let key of parent.allTemplate) {
-        if (key == data.name) continue;
-        keys.push({ name: key, value: key });
-      }
-
       let parentSelect = xmSelect.render({
         el: '#parentSelect',
         name: 'parentName',
-        data: keys,
         filterable: true,
         tips: '',
         radio: true,
@@ -77,10 +70,22 @@
           list: ["CLEAR"]
         }
       });
+      okUtils.ajax("/api/server/template_allname", "get", null, false).done(function (response) {
+        let keys = [];
+        for (let v of response.data) {
+          if (v == data.name) continue;
+          keys.push({ name: v, value: v });
+        }
+        parentSelect.update({
+          data: keys
+        });
+        parentSelect.setValue([data.parent]);
+      }).fail(function (error) {
+        console.log(error);
+      });
 
       $('#name').val(data.name);
       $('#content').val(data.content);
-      parentSelect.setValue([data.parent]);
       if (data.name == "default") {
         parentSelect.update({ disabled: true });
       }
@@ -88,7 +93,7 @@
       form.on('submit(update)', function (data) {
         let req = {
           'name': $('#name').val(),
-          'parent': parentSelect.getValue()[0]['value'],
+          'parent': parentSelect.getValue('valueStr'),
           'content': $('#content').val(),
         }
         okUtils.ajax("/api/server/template_update", "post", req, true).done(function (response) {
